Bug 219743 - [REGRESSION, BISECTED] ASUS GA402XY Headset mic stopped working after 6.12.2
Summary: [REGRESSION, BISECTED] ASUS GA402XY Headset mic stopped working after 6.12.2
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P3 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-01 20:08 UTC by Austrum
Modified: 2025-02-16 09:17 UTC (History)
3 users (show)

See Also:
Kernel Version:
Subsystem:
Regression: Yes
Bisected commit-id: e3ea2757c312e51bbf62ebc434a6f7df1e3a201f


Attachments
alsa-info_without_revert (66.45 KB, text/plain)
2025-02-01 20:09 UTC, Austrum
Details
alsa-info_with_revert (66.23 KB, text/plain)
2025-02-01 20:09 UTC, Austrum
Details
journalctl_with_revert (10.60 KB, text/plain)
2025-02-01 20:10 UTC, Austrum
Details
journalctl_without_revert (10.60 KB, text/plain)
2025-02-01 20:10 UTC, Austrum
Details
realtek_revers_patch (6.34 KB, patch)
2025-02-01 20:10 UTC, Austrum
Details | Diff
0000-asus-rog-g14-headset-mic.patch (968 bytes, application/octet-stream)
2025-02-04 08:07 UTC, Kailiang Yang
Details
alsa-info_dump_coef_par (10.01 KB, application/x-xz)
2025-02-09 07:44 UTC, Austrum
Details
0000-alc285.patch (460 bytes, application/octet-stream)
2025-02-10 02:17 UTC, Kailiang Yang
Details
0000-alc285-depop-fixup.patch (849 bytes, application/octet-stream)
2025-02-12 06:55 UTC, Kailiang Yang
Details

Description Austrum 2025-02-01 20:08:57 UTC
Laptop Model: Asus ROG G14 GA402XY
Codec: Realtek ALC285 + Cirrus logic cs35l41
Kernel: 6.12.2 and newer

System doesn't see an external mic from the headset (3.5 jack). Instead, there's only an internal mic available.
It happens with 6.12.2 kernel update.

Current workaround - reverse this commits:
https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?id=add3ab2485aca27bc10e3f5c1dbf6e4a0550680a
https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?id=e3ea2757c312e51bbf62ebc434a6f7df1e3a201f
https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?id=010135da59ee7c3724655194e42d624c55758fc0
https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?id=4ed7f16070a8475c088ff423b2eb11ba15eb89b6
Comment 1 Austrum 2025-02-01 20:09:33 UTC
Created attachment 307562 [details]
alsa-info_without_revert
Comment 2 Austrum 2025-02-01 20:09:49 UTC
Created attachment 307563 [details]
alsa-info_with_revert
Comment 3 Austrum 2025-02-01 20:10:13 UTC
Created attachment 307564 [details]
journalctl_with_revert
Comment 4 Austrum 2025-02-01 20:10:31 UTC
Created attachment 307565 [details]
journalctl_without_revert
Comment 5 Austrum 2025-02-01 20:10:54 UTC
Created attachment 307566 [details]
realtek_revers_patch
Comment 6 Austrum 2025-02-01 20:14:03 UTC
In attachments alsa-info and journalctl grepped with 'hda|realtek|cirrus'
with revert - with reverting commits for patch_realtek (patch i'm using for that in attachment). Mic is working
without revert - just as it should be with the latest kernel. Mic doesn't work.
Comment 7 Takashi Iwai 2025-02-03 12:41:54 UTC
I suppose this bug is the same as https://bugzilla.kernel.org/show_bug.cgi?id=219158
??
Comment 8 Austrum 2025-02-03 12:53:18 UTC
(In reply to Takashi Iwai from comment #7)
> I suppose this bug is the same as
> https://bugzilla.kernel.org/show_bug.cgi?id=219158
> ??

Not exactly.
There are 2 issues with sound:
1. Issue with sort_r function which is related to kernels 6.9 and higher.
2. Issue with patch_realtek.c which is related to kernels 6.12.2 and higher.

219158 was open due to 1st issue and it was resolved. After that it was closed (because the original issue (1st) was resolved)
It mentioned 2nd issue in the discussion, but there wasn't work to resolve 2nd bug.

Current bug (219743) was opened due to 2nd issue.
Comment 9 Takashi Iwai 2025-02-03 19:21:56 UTC
Could you then point exact which commit *started* breaking?
Comment 10 Kailiang Yang 2025-02-04 07:37:26 UTC
[   10.377731] input: HD-Audio Generic Mic as /devices/pci0000:00/0000:00:08.1/0000:65:00.6/sound/card2/input53
[   10.377776] input: HD-Audio Generic Mic as /devices/pci0000:00/0000:00:08.1/0000:65:00.6/sound/card2/input54

I think this was assigned same input device name for Mic. It maybe needs to change verb table for 0x19 and 0x1b.

> -----Original Message-----
> From: bugzilla-daemon@kernel.org <bugzilla-daemon@kernel.org>
> Sent: Tuesday, February 4, 2025 3:22 AM
> To: Kailang <kailang@realtek.com>
> Subject: [Bug 219743] [REGRESSION, BISECTED] ASUS GA402XY Headset mic
> stopped working after 6.12.2
> 
> 
> External mail.
> 
> 
> 
> https://bugzilla.kernel.org/show_bug.cgi?id=219743
> 
> --- Comment #9 from Takashi Iwai (tiwai@suse.de) --- Could you then point
> exact which commit *started* breaking?
> 
> --
> You may reply to this email to add a comment.
> 
> You are receiving this mail because:
> You are on the CC list for the bug.
Comment 11 Kailiang Yang 2025-02-04 08:07:31 UTC
Created attachment 307571 [details]
0000-asus-rog-g14-headset-mic.patch

Please test this patch.

Please do "echo 1 > /sys/module/snd_hda_codec/parameters/dump_coef"  Before do alsa-info.sh 
Then please do alsa-info.sh again.
Comment 12 Austrum 2025-02-09 07:44:27 UTC
Created attachment 307602 [details]
alsa-info_dump_coef_par
Comment 13 Austrum 2025-02-09 07:50:21 UTC
Sorry for making you wait, haven't had time on a weekdays.

(In reply to Takashi Iwai from comment #9)
> Could you then point exact which commit *started* breaking?

I suppose this is it - https://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git/commit/?id=e3ea2757c312e51bbf62ebc434a6f7df1e3a201f (they all kinda connected to it).

(In reply to Kailiang Yang from comment #11)
> Please test this patch.
> 
> Please do "echo 1 > /sys/module/snd_hda_codec/parameters/dump_coef"  Before
> do alsa-info.sh 
> Then please do alsa-info.sh again.

Done. Patch didn't help, also I can assure you that this pins fixups are correct.
In the archive in attachments (alsa-info_dump_coef_par) 3 alsa-info outputs (all with parameter dump_coef) with your patch, without patches and with reverting commits from my 1st message (mic work only in this one).
Comment 14 Kailiang Yang 2025-02-10 02:17:14 UTC
Created attachment 307604 [details]
0000-alc285.patch

I check the dump file. You disabled power save mode.
Test attach patch maybe it helps.
Comment 15 Austrum 2025-02-10 07:50:43 UTC
(In reply to Kailiang Yang from comment #14)
> 0000-alc285.patch
> 
> Test attach patch maybe it helps.

It's seems to be working, mic is showing up again, thank you!
Comment 16 Kailiang Yang 2025-02-12 06:55:42 UTC
Created attachment 307619 [details]
0000-alc285-depop-fixup.patch

Fixup headset MIC no function.
Comment 17 Takashi Iwai 2025-02-12 07:27:51 UTC
On Wed, 12 Feb 2025 07:55:20 +0100,
Kailang wrote:
> 
> Fixup headset MIC no function.

Applied now.  Thanks.


Takashi

Note You need to log in before you can comment on or make changes to this bug.